JumpScript/tests/baselines/reference/templateStringUnterminated4.errors.txt
tests/cases/conformance/es6/templates/templateStringUnterminated4.jump(1,6): error TS1160: Unterminated template literal.


==== tests/cases/conformance/es6/templates/templateStringUnterminated4.jump (1 errors) ====
    `\\\`
         
!!! error TS1160: Unterminated template literal.